kustomize/overlays/pippo/webapp-deploy-rolling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      run: pippo
  template:
    metadata:
      labels:
        run: pippo
