kustomize/overlays/pippo/webapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pippo
  namespace: default
spec:
  selector:
    run: pippo
